@@ -8,3 +8,7 @@ Dec. 28 2011
 Feb. 10 2012
 	Fixed (C) symbol so that it works with
 	all systems.
+
+May. 18 2012
+	reworked buffering.  Now using mem mapped 
+	I/O.  Still is slow with multi-gigabyte files.  
